# Claudia

./: CHANGELOG.md  LICENSE  README.md  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  encrypted_storage.rs  lib.rs  main.rs  storage.rs
src-tauri/src/commands/: common.rs  floating.rs  folder.rs  mod.rs  note.rs  password.rs  settings.rs  task.rs  template.rs  trash.rs  vault.rs  workspace.rs
src-tauri/src/mcp/: api.rs  mod.rs  tools.rs
src-tauri/src/models/: common.rs  config.rs  folder.rs  mod.rs  note.rs  password.rs  task.rs  template.rs
src/components/kanban/: KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
src/components/layout/: FolderSidebar.tsx  Header.tsx  Sidebar.tsx
src/components/mcp/: MCPServerButton.tsx  MCPServerDialog.tsx
src/components/note/: NoteEditor.tsx
src/components/password/: PasswordEditor.tsx
src/components/settings/: SettingsModal.tsx
src/components/task/: TaskEditor.tsx
src/components/template/: TemplateSelector.tsx
src/components/ui/: Button.tsx  (+6 more)
src/data/: noteTemplates.ts
src/hooks/: useFloatingWindows.ts  useNotifications.ts
src/lib/: editor.ts  tauri.ts
src/pages/: FloatingWindow.tsx  NotesView.tsx  PasswordsView.tsx  TasksView.tsx  WorkspaceHome.tsx
src/stores/: folderStore.ts  index.ts  mcpStore.ts  noteStore.ts  passwordStore.ts  settingsStore.ts  taskStore.ts  templateStore.ts  trashStore.ts  uiStore.ts  vaultStore.ts  workspaceStore.ts
src/types/: index.ts
(+2 files in other folders)
